--- a/Youtube Subscribe.HTML
+++ b/Youtube Subscribe.HTML
@@ -1,5 +1,5 @@
 <style>
-  button{ 
+  .yt-button { 
     background-color:black;
     color:white;
     border:none;
@@ -13,6 +13,7 @@
     cursor: pointer;
   }
 </style>
-<button>
+
+<button class="yt-button">
   Subscribe
 </button>
