--- a/Youtube Subscribe.HTML
+++ b/Youtube Subscribe.HTML
@@ -11,8 +11,14 @@
     font-weight: 500;
     line-height: 18px;
     cursor: pointer;
+    transition: hover 0.15s
+  }
+
+  .yt-button:hover {
+    opacity: 0.8;
   }
 </style>
+
 
 <button class="yt-button">
   Subscribe
